<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">中民投OA</string>
    <string name="contact_name">最近联系人</string>
    <string name="cancel">取消</string>
    <string name="login">立即登录</string>
    <string name="password">密码</string>
    <string name="email">Email</string>
    <string name="userName">账号</string>
    <string name="home">首页</string>
    <string name="personMainBt">我</string>
    <string name="fresh">新鲜事</string>
    <string name="person_reply">%s</string>
    <string name="person_praise">%s</string>
    <string name="person_delete">删除</string>
    <string name="person_content">开发项目 进度安排</string>
    <string name="fresh_sendshare">发分享</string>
    <string name="fresh_send">发送</string>
    <string name="reply">回复</string>
    <string name="sendReply">发布</string>
    <string name="share">分享</string>
    <string name="zero">0</string>
    <string name="im_capture_photo">拍摄照片</string>
    <string name="im_select_photo">选择图片</string>
    <string name="send_message">发表</string>
    <string name="send_conversation_textmessage">发送</string>
    <string name="hold_to_talk">按住说话</string>
    <string name="media_recording">录制中</string>
    <string name="hold_to_film">按住拍摄</string>
    <string name="tip_for_voice_forward">按住 说话</string>
    <string name="release_to_send_voice">松开 结束</string>
    <string name="take_photo_btn_text">照片</string>
    <string name="take_camera_btn_text">拍照</string>
    <string name="message_null">不能发送空内容哦！</string>
    <string name="message_image_desc">Message Image</string>
    <string name="sdcard_unavaluable">请检查存储卡是否可用</string>
    <string name="chat">发起聊天</string>

    <string name="userHasNoValue">用户名不能为空</string>
    <string name="pwdHasNoValue">密码不能为空</string>

    <string name="fragment_home_workalarm">工作提醒</string>
    <string name="fragment_home_applicationalarm">应用提醒</string>
    <string name="fragment_home_about">关于</string>
    <string name="fragment_home_fileList">附件列表</string>
    <string name="fragment_home_sendrange">发送范围</string>
    <string name="waitForDealWith">待办</string>
    <string name="reminder_me">\@我</string>
    <string name="activity_workalarm_ireceived">回复</string>
    <string name="activity_workalarm_isend">我发出的回复</string>
    <string name="activity_workalarm_isendreply">我发出的回复</string>
    <string name="sendWork">我发出的工作</string>
    <string name="praise_received">我收到的赞</string>
    <string name="lookup_details">查看详情</string>
    <string name="delete">刪除</string>
    <string name="nextPerson">下一审批人</string>
    <string name="examine">审批</string>

    <string name="person_main_item_mainPage">个人主页</string>
    <string name="person_main_item_draft">草稿箱</string>
    <string name="person_main_item_edite">编辑资料</string>
    <string name="person_main_item_broadcoast">系统通知</string>
    <string name="person_main_item_sit">系统设置</string>
    <string name="person_main_item_about">关于</string>
    <string name="person_main_item_feedback">反馈意见</string>
    <string name="feedback_hit">有什么意见或建议，请告诉我们</string>

    <string name="title_approval_types">审批类型</string>

    <string name="activity_sendshare_hint">请填写分享内容</string>
    <string name="send_scope">发送范围</string>
    <string name="fresh_colleague">同事</string>
    <string name="add_picture">图片</string>
    <string name="add_attachment">附件</string>
    <string name="hasSelected">已选择:</string>
    <string name="selectExecutorPerson">选择执行人</string>
    <string name="finishTime">完成时间</string>
    <string name="selectExamine">选择审批人</string>

    <string name="todayWorkSummary">今日工作总结:</string>
    <string name="tomorrowWorkPlan">明日工作计划:</string>
    <string name="workSummary">工作心得体会:</string>
    <string name="comment">点评</string>
    <string name="praise">赞</string>
    <string name="commentDiary">点评日志</string>
    <string name="diary">日志</string>
    <string name="writeReply">批复</string>
    <string name="replyResult">汇报结果</string>
    <string name="selectMethod">请选择操作方式</string>
    <string name="agree">同意</string>
    <string name="disagree">不同意</string>
    <string name="replyagain">复议</string>
    <string name="command">指令</string>
    <string name="praiseReplyPerson">赞过此回复的人</string>
    <string name="praiseTimes">被赞(%s)次</string>
    <string name="shareScope">分享范围</string>
    <string name="sure">确定</string>
    <string name="sendScope">发送范围:</string>

    <string name="person_tab_all">全部</string>
    <string name="person_tab_feedback">回复</string>
    <string name="person_tab_collect">收藏</string>
    <string name="person_tab_My">我的</string>
    <string name="person_tab_MyData">我的资料</string>

    <string name="login_regist">注册账号</string>
    <string name="find_password">忘记密码</string>

    <string name="department_list">按部门选择</string>
    <string name="departmentst">部门列表</string>
    <string name="department">部门</string>


    <!--新鲜事popupWindow start-->
    <string name="sendShare">发分享</string>
    <string name="sendDiary">发日志</string>
    <string name="sendCommand">发指令</string>
    <string name="sendExamine">发审批</string>
    <!--新鲜事popupWindow end-->

    <string name="sendDiary_week">发周计划</string>
    <string name="sendDiary_month">发月计划</string>
    <string name="weekWorkSummaryHint">请填写本周工作总结</string>
    <string name="nextWeekWorkSummaryHint">请填写下周工作总结</string>
    <string name="monthWorkSummaryHint">请填写本月工作总结</string>
    <string name="nextMonthWorkSummaryHint">请填写下月工作总结</string>
    <string name="iSend">我发出的</string>

    <!--發日誌頁面 start-->
    <string name="todayWorkSummaryHint">请填写今日工作总结</string>
    <string name="tomorrowWorkSummaryHint">请填写明日工作总结</string>
    <string name="workSummaryHint">请填写工作心得体会</string>
    <string name="sendDiary_sendScope">抄送范围</string>
    <string name="sendDiary_commentPerson">点评人</string>
    <!--發日誌頁面 end-->

    <string name="sendFailed">发送失败</string>
    <string name="sendSuccess">发送成功</string>

    <string name="selectSendScope">选择发送范围</string>

    <string name="sendCommandHint">请填写指令内容</string>

    <string name="sendExamineHint">请填写审批内容</string>

    <string name="zhongmintoubiji">中民投笔记</string>
    <string name="zhongmintougzt">工资条</string>


    <string-array name="worksend_item">
        <item>审批</item>
        <item>日志</item>
        <item>指令</item>
    </string-array>

    <string-array name="typeReflection">
        <item>分享</item>
        <item>日志</item>
        <item>指令</item>
        <item>审批</item>
    </string-array>

    <!--发送范围tab-->
    <string-array name="selectSendScope_tabItem">
        <item>最近</item>
        <item>同事</item>
        <item>部门</item>
    </string-array>
    <!--发送范围tab-->
    <string-array name="wait_tab_title">
        <item>日志</item>
        <item>指令</item>
        <item>审批</item>
    </string-array>

    <string name="wait_tab_title_frist">日志</string>
    <string name="wait_tab_title_second">指令</string>
    <string name="wait_tab_title_thrid">审批</string>

    <string name="ranage_tab_title_frist">最近</string>
    <string name="ranage_tab_title_second">同事</string>
    <string name="ranage_tab_title_thrid">部门</string>


    <string name="person_infor_headImage">头像</string>
    <string name="person_infor_editePassword">修改密码</string>
    <string name="person_infor_name">姓名</string>
    <string name="person_infor_account">账号</string>
    <string name="person_infor_company">公司</string>
    <string name="person_infor_department">部门</string>
    <string name="person_infor_post">职位</string>
    <string name="person_infor_boss">直属上司</string>
    <string name="improveAdvise">改进建议</string>

    <!-- 修改密码 -->
    <string name="change_password_fail">修改失败</string>
    <string name="change_password_old_empty">原始密码不能为空</string>
    <string name="change_password_new_empty">新密码不能为空</string>
    <string name="change_password_affirm_empty">确认密码不能为空</string>
    <string name="change_password_affirm_new_notEqual">两次密码输入不一致</string>

    <!--Toast提示内容-->
    <string name="notnull">输入内容不能为空</string>


    <string name="allCompany">全公司,</string>


    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="only_choose_num">超出可选图片张数</string>
    <string name="music">音乐</string>
    <string name="picture">图片</string>
    <string name="phoneMemory">手机内存</string>
    <string name="sdCard">SD卡内存</string>
</resources>
