<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:main_title="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/workAlarmBackgroundColor"
    android:orientation="vertical">

    <com.idxk.mobileoa.android.ui.views.widget.MainTitleView
        android:id="@+id/dealWith_homeCommonTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        main_title:leftImage="@drawable/title_back"
        main_title:leftImagePress="@drawable/title_arrow_left_click"
        main_title:showLeft="true"
        main_title:showTitle="true"
        main_title:titleCenter="@string/waitForDealWith" />

    <com.idxk.mobileoa.android.ui.views.widget.ThreeTabsView
        android:id="@+id/dealWith_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        main_title:titleFrist="@string/wait_tab_title_thrid"
        main_title:titleSecond="@string/wait_tab_title_frist"
        main_title:titleThrid="@string/wait_tab_title_second" />

    <android.support.v4.view.ViewPager
        android:id="@+id/dealWith_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>