<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fresh_select_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sendDiary"
        style="@style/fresh_lv_item_filter_left_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendDiary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:src="#094d78" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:src="#3b71a0" />

    </LinearLayout>

    <TextView
        android:id="@+id/sendDiary_week"
        style="@style/fresh_lv_item_filter_left_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendDiary_week" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:src="#094d78" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:src="#3b71a0" />

    </LinearLayout>

    <TextView
        android:id="@+id/sendDiary_month"
        style="@style/fresh_lv_item_filter_left_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendDiary_month" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:src="#094d78" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:src="#3b71a0" />

    </LinearLayout>
</LinearLayout>