<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fresh_select_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/eightDp"
    android:paddingRight="@dimen/eightDp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/tendp"
            android:src="@drawable/work_all" />


        <TextView
            android:id="@+id/freshTitleAll"
            style="@style/fresh_lv_item_filter_left_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_tab_all" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:src="#094d78" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:src="#3b71a0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/tendp"
            android:src="@drawable/work_share" />

        <TextView
            android:id="@+id/freshTitleShare"
            style="@style/fresh_lv_item_filter_left_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:src="#094d78" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:src="#3b71a0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/tendp"
            android:src="@drawable/work_diary" />

        <TextView
            android:id="@+id/freshTitleDiary"
            style="@style/fresh_lv_item_filter_left_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:src="#094d78" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:src="#3b71a0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/tendp"
            android:src="@drawable/work_command" />

        <TextView
            android:id="@+id/freshTitleCommand"
            style="@style/fresh_lv_item_filter_left_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/command" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:src="#094d78" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:src="#3b71a0" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/tendp"
            android:src="@drawable/work_approvel" />

        <TextView
            android:id="@+id/freshTitleExamine"
            style="@style/fresh_lv_item_filter_left_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/examine" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:src="#094d78" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:src="#3b71a0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/tendp"
            android:src="@drawable/work_sendwork" />

        <TextView
            android:id="@+id/freshTitleiSend"
            style="@style/fresh_lv_item_filter_left_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iSend" />
    </LinearLayout>


</LinearLayout>